cabal-version:   3.0
name:            telegram-assistant
version:         0.0.0.0
license:         BSD-3-Clause
license-file:    LICENSE
author:          thelissimus
maintainer:      thelissimus@tuta.io
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DerivingStrategies

library
  import:          warnings, defaults
  exposed-modules: Assistant
  build-depends:
    , base                 >=4.7   && <5
    , effectful
    , effectful-th
    , exceptions
    , hackage-db
    , hoogle
    , telegram-bot-api     ==7.4.4
    , telegram-bot-simple
    , text

  hs-source-dirs:  src

executable telegram-assistant
  import:         warnings, defaults
  main-is:        Main.hs
  build-depends:
    , base                >=4.7 && <5
    , telegram-assistant

  hs-source-dirs: app
